kind/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-service
  namespace: portfolio-ns
spec:
  selector:
    app: portfolio-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
